# Kotocord

./: .gitignore  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  LICENSE  README.md
resources/: kaomoji.json  resources.qrc
src/: main.cpp
src/core/: AppController.cpp  AppController.h  DataTypes.h
src/modules/capture/: AudioCapture.cpp  AudioCapture.h  AudioFileSimulator.cpp  AudioFileSimulator.h
src/modules/input/: AudioCapture.cpp  AudioCapture.h  AudioFileSimulator.cpp  AudioFileSimulator.h  IAudioTranscriber.h  VoskTranscriber.cpp  VoskTranscriber.h  WhisperTranscriber.cpp  WhisperTranscriber.h
src/modules/llm/: DeepSeekAPIWorker.cpp  DeepSeekAPIWorker.h  ILanguageModel.h  KaomojiManager.cpp  KaomojiManager.h  MockLLMWorker.cpp  MockLLMWorker.h  OpenAILLMWorker.h
src/modules/render/: SubtitleRenderer.cpp  SubtitleRenderer.h
src/modules/system/: SystemResourceMonitor.cpp  SystemResourceMonitor.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TransparentWidget.cpp  TransparentWidget.h
src/utils/: AppPaths.h
